fb marketplace product uploader

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>FB Marketplace Uploader</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marketplace Uploader</title>
 </head>
 <body>
-    <h1>Product List</h1>
-    <ul id="productList"></ul>
-    <button id="upload">Upload to Facebook</button>
+    <h1>Upload to Marketplace</h1>
+    <button id="fetchProduct">Fetch Product</button>
+    <div id="productDetails"></div>
+    <button id="uploadProduct" disabled>Upload Product</button>
+
     <script src="popup.js"></script>
 </body>
 </html>
